# libdng

./: .gitignore  CMakeLists.txt  Makefile
include/: ai.h  attack-event.h  attack.h  attr-primary-input.h  attr-primary.h  attr-secondary.h  attr.h  chance.h  class.h  combat-action.h  combat.h  context.h  damage.h  debug.h  def.h  dice-pool.h  dice-rolls.h  dice.h  die.h  element.h  entities.h  entity-input.h  entity.h  evasion.h  event-id.h  event-list.h  event.h  grid-slot.h  grid.h  health.h  hit-chance.h  input-def.h  input.h  int-bag.h  int.h  mempool.h  nodes.h  output.h  pool.h  race.h  (+15 more)
src/: CMakeLists.txt  ai.c  attack-event.c  attack.c  attr-primary-input.c  attr-primary.c  attr-secondary.c  attr.c  chance.c  class.c  combat-action.c  combat.c  context.c  damage.c  dice-pool.c  dice-rolls.c  dice.c  die.c  entities.c  entity-input.c  entity.c  evasion.c  event-list.c  event.c  grid-slot.c  grid.c  health.c  hit-chance.c  input.c  int-bag.c  int.c  mempool.c  nodes.c  pool.c  race.c  source.c  spell-action.c  spell-pool.c  spell-slot.c  spell-slots.c  (+6 more)
