set(CFILES attack.c attr.c attr-primary.c attr-primary-input.c class.c combat.c context.c damage.c die.c dice-pool.c dice-rolls.c entity.c entities.c event.c event-list.c grid.c grid-slot.c health.c input.c int-bag.c int.c mempool.c nodes.c pool.c race.c source.c spellbook.c spell-slot.c spell-slots.c weapon.c)
add_library(dng ${CFILES})
target_include_directories(dng PUBLIC ../include)
target_compile_features(dng PUBLIC c_std_99)
target_compile_options(dng PRIVATE -Wall -Wextra -pedantic -Werror)
